fleshed out readme, Fixed undefiend field they no longer display

--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -840,7 +840,7 @@
   .uneditable-input[class*="span"],
   .row-fluid [class*="span"] {
     display: block;
-    float: none;
+    /*float: none;*/
     width: 100%;
     margin-left: 0;
     -webkit-box-sizing: border-box;
