--- a/css/style.css
+++ b/css/style.css
@@ -6,44 +6,9 @@
 #actionLogForm,
 #quickNoteForm, 
 #chronOldest,
-#chronNewest {
-    display: none;
-}
-
+#chronNewest,
 .hideShow {
     display: none;
-}
-
-.red {
-    font-weight: bold;
-    color: red;
-}
-
-.cropContainer {
-    padding: 10px 20px 20px 20px;
-    margin: 20px 0px 25px 0px;
-    border: 1px solid #E7DFD7;
-    background: #F8F8F8;
-        -webkit-border-top-right-radius: 60px;
-        -webkit-border-bottom-left-radius: 20px;
-        -moz-border-radius-topright: 60px;
-        -moz-border-radius-bottomleft: 20px;
-        border-top-right-radius: 60px;
-        border-bottom-left-radius: 20px;
-}
-
-.actionContainer,
-.quickContainer {
-    padding: 0px 5px 0px 15px;
-    margin: 10px 0px 0px 0px;
-    border-left: 3px solid;
-    border-color: #107710;
-}
-
-/*for search*/
-
-span.searchword { 
-    background-color: #C5E3BF; 
 }
 
 /*styling*/
@@ -69,7 +34,14 @@ a {
     color: #107710;
 }
 
-/* Header */
+.red {
+    font-weight: bold;
+    color: red;
+}
+
+span.searchword { 
+    background-color: #C5E3BF; 
+}
 
 #header {
     margin-top: 45px;
@@ -85,7 +57,7 @@ a {
     font-size: 3.8em;
 }
 
-.header p {
+.tagline {
     margin: 0px;
     padding: 0px;
     text-transform: uppercase;
@@ -93,9 +65,9 @@ a {
     color: #3B3B3B;
 }
 
-.header p a {
+/*.header p a {
     color: #3B3B3B;
-}
+}*/
 
 .sidebar ul {
     list-style-type: none;
@@ -115,8 +87,6 @@ a {
     color: #3B3B3B;
 }
 
-/* Form */
-
 .form {
     margin-bottom: 25px;
     padding: 15px 25px 25px 25px;
@@ -130,4 +100,27 @@ a {
         border-bottom-right-radius: 60px;
 }
 
+.cropContainer {
+    padding: 10px 20px 20px 20px;
+    margin: 20px 0px 25px 0px;
+    border: 1px solid #E7DFD7;
+    background: #F8F8F8;
+        -webkit-border-top-right-radius: 60px;
+        -webkit-border-bottom-left-radius: 20px;
+        -moz-border-radius-topright: 60px;
+        -moz-border-radius-bottomleft: 20px;
+        border-top-right-radius: 60px;
+        border-bottom-left-radius: 20px;
+}
 
+.actionContainer,
+.quickContainer {
+    padding: 0px 5px 0px 15px;
+    margin: 10px 0px 0px 0px;
+    border-left: 3px solid;
+    border-color: #107710;
+}
+
+.logByDate p {
+    margin-left: 15px;
+}
